--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
+  },
+  "dependencies": {
+    "flatpickr": "^4.6.11",
+    "lodash.throttle": "^4.1.1",
+    "throttle": "^1.0.3"
   }
 }
